minor css fix for starburst image on single magazine page on smaller width screens

--- a/src/sass/_posts.scss
+++ b/src/sass/_posts.scss
@@ -174,6 +174,7 @@
     }
     .single-post-thumbnail {
       position: relative;
+      display: inline-block;
 
       #starburst {
         width: 100px;
